[package]
description = "Solana Program Test Framework"
name = "solana-program-test"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
# Fix all dependencies in this fork, so that program-test (the only thing that has been changed)
# can be built and published by itself
[dependencies]
assert_matches = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
chrono-humanize = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
solana-accounts-db = { workspace = true }
solana-banks-client = { workspace = true }
solana-banks-interface = { workspace = true }
solana-banks-server = { workspace = true }
solana-bpf-loader-program = { workspace = true }
solana-logger = { workspace = true }
solana-program-runtime = { workspace = true }
solana-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-svm = { workspace = true }
solana-vote-program = { workspace = true }
solana_rbpf = { workspace = true }
test-case = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
solana-stake-program = { workspace = true }
